Fix alignment of comments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -317,14 +317,24 @@ nav .navbar-name {
     align-self: left;
 }
 
+// COMMENTS
+.comment-line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 // COMMENT FORM
 .comment-form {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
 }
 
 .comment-form .field {
     width: 100%;
+    margin-bottom: 0;
 }
 
 .media+.media {
